Bug 253020 - Fix Live Text layout for images with vertical writing mode
Summary: Fix Live Text layout for images with vertical writing mode
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-27 12:33 PST by Richard Robinson
Modified: 2023-02-28 14:00 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Robinson 2023-02-27 12:33:32 PST
rdar://101314828
Comment 1 Richard Robinson 2023-02-27 12:35:16 PST
Pull request: https://github.com/WebKit/WebKit/pull/10751
Comment 2 EWS 2023-02-28 14:00:47 PST
Committed 260968@main (655c6f748f08): <https://commits.webkit.org/260968@main>

Reviewed commits have been landed. Closing PR #10751 and removing active labels.