Fix Live Text layout for images with vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=253020 rdar://101314828

Reviewed by Wenson Hsieh.

* LayoutTests/fast/images/text-recognition/mac/layout-for-vertical-writing-mode-expected.txt: Added.
* LayoutTests/fast/images/text-recognition/mac/layout-for-vertical-writing-mode.html: Added.
* Source/WebCore/PAL/pal/spi/cocoa/VisionKitCoreSPI.h:
* Source/WebCore/dom/ImageOverlay.cpp:
(WebCore::ImageOverlay::updateWithTextRecognitionResult):
* Source/WebCore/platform/TextRecognitionResult.h:
(WebCore::TextRecognitionLineData::TextRecognitionLineData):
* Source/WebCore/testing/Internals.cpp:
(WebCore::makeDataForLine):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:
* Source/WebKit/Platform/cocoa/ImageAnalysisUtilities.mm:
(WebKit::makeTextRecognitionResult):
* Source/WebKit/Shared/TextRecognitionResult.serialization.in:

Canonical link: https://commits.webkit.org/260968@main